--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             bri: { name: 'BRI', num: '🚫', img: 'https://upload.wikimedia.org/wikipedia/commons/6/68/BANK_BRI_logo.svg' },
 
             // Pulsa
-            pulsa: { name: 'Telkomsel', num: '082528953372', img: 'https://upload.wikimedia.org/wikipedia/commons/b/bc/Telkomsel_2021_icon.svg' },
+            pulsa: { name: 'Telkomsel', num: '08252xxx', img: 'https://upload.wikimedia.org/wikipedia/commons/b/bc/Telkomsel_2021_icon.svg' },
             indosat: { name: 'Indosat', num: '0857xxx', img: 'indosat.jpg' },
             tri: { name: 'Axis', num: '083841375107', img: 'tri.jpg' },
             smartfren: { name: 'Smartfren', num: '088xxx', img: 'smr.jpg' }
