--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
                     <h2 id="userName"></h2>
                     <p><span class="status-dot"></span> Online & Verified</p>
                     <div class="social-bar">
-                        <a href="https://instagram.com/r4mz_682" target="_blank" class="soc-icon ripple" onclick="playTick()">
+                        <a href="https://instagram.com/43d2c191" target="_blank" class="soc-icon ripple" onclick="playTick()">
                             <i class="ri-instagram-fill"></i>
                         </a>
-                        <a href="https://www.instagram.com/43d2c191?igsh=M3I1cWt5cmFvdnA0" target="_blank" class="soc-icon ripple" onclick="playTick()">
+                        <a href="https://t.me/r4mz_682" target="_blank" class="soc-icon ripple" onclick="playTick()">
                             <i class="ri-telegram-fill"></i>
                         </a>
                         <a href="https://id.linkedin.com/in/ramz-xploit-27704a361" target="_blank" class="soc-icon ripple" onclick="playTick()">
