--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             display: inline-block; padding-left: 100%; animation: marquee 15s linear infinite;
             font-size: 11px; color: var(--text-muted); font-family: monospace;
         }
-        @keyrames marquee { 0% { transform: translate(0, 0); } 100% { transform: translate(-100%, 0); } }
+        @keyframes marquee { 0% { transform: translate(0, 0); } 100% { transform: translate(-100%, 0); } }
 
         /* --- MENU GRID --- */
         .menu-title { font-size: 14px; font-weight: 700; margin-bottom: 15px; color: var(--text-on-dark); letter-spacing: 0.5px; text-transform: uppercase; opacity: 0.8; }
